Fix multiple matSuffix elements by wrapping in single container

--- a/src/ZoomLoop.App/src/app/pages/loan-calculator/loan-calculator.scss
+++ b/src/ZoomLoop.App/src/app/pages/loan-calculator/loan-calculator.scss
@@ -35,6 +35,12 @@
 
       .form-field {
         width: 100%;
+
+        .mat-mdc-form-field-icon-suffix {
+          display: flex;
+          align-items: center;
+          gap: 0.25rem;
+        }
       }
 
       .info-icon {
@@ -43,6 +49,7 @@
         font-size: 1.25rem;
         width: 1.25rem;
         height: 1.25rem;
+        margin-left: 0.25rem;
       }
     }
 
